deploy/app/interface/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interface
spec:
  revisionHistoryLimit: 1
  selector: {}
  template:
    spec:
      imagePullSecrets:
      - name: ghcr-creds
      containers:
      - name: interface
        image: app
        imagePullPolicy: Always
        args: [ server.js ]
        volumeMounts:
        - name: config
          mountPath: /config
          readOnly: true
        - name: certs-grpc
          mountPath: '/etc/certs/grpc'
          readOnly: true
        resources:
          limits:
            memory: "1000Mi"
            cpu: "1"
        ports:
        - containerPort: 3000
      volumes:
      - name: certs-grpc
        secret:
          secretName: jwtks-service-tls
      - name: config
        configMap:
          name: stud42-config
