deploy/app/interface/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interface-http
spec:
  ports:
  - port: 3000
    targetPort: 3000
